--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "database": "json-server src/data/db.json"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "json-server": "^1.0.0-beta.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "vue-mapbox-ts": "^0.9.10"
+    "vue-mapbox-ts": "^0.9.10",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/ui": "^1.6.0",
     "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
     "jsdom": "^24.0.0",
