--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "database": "json-server src/data/db.json"
+    "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "json-server": "^1.0.0-beta.1",
     "vue": "^3.4.21",
     "vue-mapbox-ts": "^0.9.10",
     "vue-router": "^4.3.0"
