--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@tsconfig/node20": "^20.1.4",
     "@types/jest": "^29.5.12",
     "@types/jsdom": "^21.1.6",
@@ -26,6 +28,7 @@
     "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
     "babel-jest": "^29.7.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "jest": "^29.7.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
