--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
-    "test:unit": "vitest",
+    "unit": "vitest",
+    "unit:ui": "vitest --ui",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force"
   },
